--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
+    "vite-plugin-sass-dts": "^1.3.17",
     "vite-plugin-svgr": "^4.2.0"
   }
 }
