--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,8 @@
+stages:
+  - build
+
 build_test_image:
+  stage: build
   script:
     - docker build -t docker.infra.cloveri.com/$CI_PROJECT_PATH:t`grep version package.json | grep -Po [0-9.]*` .
     - docker login https://docker.infra.cloveri.com -u $CI_REGISTRY_USER --password-stdin <<<$CI_JOB_TOKEN
@@ -9,7 +13,8 @@ build_test_image:
     - if: '$CI_COMMIT_BRANCH == "dev"'
   tags: [docker]
 
-build_test_image:
+build_prod_image:
+  stage: build
   script:
     - docker build -t docker.infra.cloveri.com/$CI_PROJECT_PATH:latest .
     - docker image tag docker.infra.cloveri.com/$CI_PROJECT_PATH:latest docker.infra.cloveri.com/$CI_PROJECT_PATH:`grep version package.json | grep -Po [0-9.]*' package.json`
