--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@jsx6/jsx-dev-runtime": "^1.8.3",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
+    "date-fns": "^3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
