--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,4 +60,4 @@ build_prod_image:
 notification:
   stage: notification
   script:
-   - curl "https://api.telegram.org/$POS_TOK:$PRE_TOK/sendMessage?chat_id=-1002069387923_1491&message_thread_id=1491&text=Project%20$CI_PROJECT_TITLE%0ACommit%20in%20$CI_COMMIT_BRANCH%20branch.%0AComment%20in%20the%20commit:%20$CI_COMMIT_MESSAGE.%0AAuthor%20of%20commit:%20$GITLAB_USER_LOGIN.%0ANew%20version%20of%20the%20project:%20`grep version package.json | grep -Po [0-9.]*`.%0A$CI_PIPELINE_URL"
+   - curl "https://api.telegram.org/$POS_TOK:$PRE_TOK/sendMessage?chat_id=-1002069387923_1491&message_thread_id=1491&text=Project:%20$CI_PROJECT_TITLE%0ACommit%20in%20$CI_COMMIT_BRANCH%20branch.%0AComment%20in%20the%20commit:%20$CI_COMMIT_MESSAGE.%0AAuthor%20of%20commit:%20$GITLAB_USER_LOGIN.%0ANew%20version%20of%20the%20project:%20$(grep version package.json | grep -Po [0-9.]*).%0A$CI_PIPELINE_URL"
