--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,7 @@ deploy_in_test:
   script:
     - sed -i "s/PROJECT_IMAGE_NAME/$CI_PROJECT_NAME:t`grep version package.json | grep -Po [0-9.]*`/g" compose.yaml
     - docker login https://docker.infra.cloveri.com -u $CI_REGISTRY_USER --password-stdin <<<$CI_JOB_TOKEN
-    - docker compose down -p achiever_front || true
+    - docker compose -p achiever_front down || true
     - docker rmi `docker images -q docker.infra.cloveri.com/$CI_PROJECT_PATH` || true
     - docker compose up -d
   after_script:
