--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,6 @@
+name: achiever_front
 services:
-  achiever_front:
+  front:
     image: docker.infra.cloveri.com/cloveri.start/achiever/PROJECT_IMAGE_NAME
     volumes:
       - /usr/achiever_front/.env:/app/.env
