--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,15 +5,12 @@ workflow:
     - if: $CI_PIPELINE_SOURCE == "web"
     - if: $CI_COMMIT_MESSAGE =~ /^Update build version*/
       when: never
-    - if: $CI_COMMIT_BRANCH == "dev"
-    - if: $CI_COMMIT_BRANCH == "master"
-
+    - if: $CI_COMMIT_BRANCH
 
 stages:
   - vars
   - build
   - deploy
-  - notification
 
 default:
   artifacts:
@@ -23,6 +20,10 @@ default:
     expire_in: 1 days
   tags:
     - docker
+
+variables:
+  IMAGE_NAME: "vit.ru.achiever"
+  USER_NAME: achiever
 
 update_version:
   stage: vars
@@ -35,44 +36,66 @@ update_version:
     - cd git_project && git add . && git commit -m "Update build version" 
     - git push https://repository_user_token:$repository_user_token@git.infra.cloveri.com/cloveri.start/achiever/front.git/
 
-
 build_test_image:
   stage: build
   script:
-    - docker build -t docker.infra.cloveri.com/$CI_PROJECT_PATH:t`grep version package.json | grep -Po [0-9.]*` .
+    - docker build -t docker.infra.cloveri.com/$CI_PROJECT_PATH/$IMAGE_NAME:t`grep version package.json | grep -Po [0-9.]*` .
     - docker login https://docker.infra.cloveri.com -u $CI_REGISTRY_USER --password-stdin <<<$CI_JOB_TOKEN
-    - docker push docker.infra.cloveri.com/$CI_PROJECT_PATH:t`grep version package.json | grep -Po [0-9.]*`
+    - docker push docker.infra.cloveri.com/$CI_PROJECT_PATH/$IMAGE_NAME:t`grep version package.json | grep -Po [0-9.]*`
   after_script:
-    - docker rmi docker.infra.cloveri.com/$CI_PROJECT_PATH:t`grep version package.json | grep -Po [0-9.]*`
+    - docker rmi docker.infra.cloveri.com/$CI_PROJECT_PATH/$IMAGE_NAME:t`grep version package.json | grep -Po [0-9.]*`
   rules:
     - if: '$CI_COMMIT_BRANCH == "dev"'
 
 build_prod_image:
   stage: build
   script:
-    - docker build -t docker.infra.cloveri.com/$CI_PROJECT_PATH:latest .
-    - docker image tag docker.infra.cloveri.com/$CI_PROJECT_PATH:latest docker.infra.cloveri.com/$CI_PROJECT_PATH:`grep version package.json | grep -Po [0-9.]*' package.json`
+    - docker build -t docker.infra.cloveri.com/$CI_PROJECT_PATH/$IMAGE_NAME:latest .
+    - docker image tag docker.infra.cloveri.com/$CI_PROJECT_PATH/$IMAGE_NAME:latest docker.infra.cloveri.com/$CI_PROJECT_PATH/$IMAGE_NAME:`grep version package.json | grep -Po [0-9.]*' package.json`
     - docker login https://docker.infra.cloveri.com -u $CI_REGISTRY_USER --password-stdin <<<$CI_JOB_TOKEN
-    - docker push docker.infra.cloveri.com/$CI_PROJECT_PATH:latest
-    - docker push docker.infra.cloveri.com/$CI_PROJECT_PATH:`grep version package.json | grep -Po [0-9.]*' package.json` .
+    - docker push docker.infra.cloveri.com/$CI_PROJECT_PATH/$IMAGE_NAME:latest
+    - docker push docker.infra.cloveri.com/$CI_PROJECT_PATH/$IMAGE_NAME:`grep version package.json | grep -Po [0-9.]*' package.json` .
   after_script:
-    - docker rmi docker.infra.cloveri.com/$CI_PROJECT_PATH:latest
-    - docker rmi docker.infra.cloveri.com/$CI_PROJECT_PATH:`grep version package.json | grep -Po [0-9.]*` .
+    - docker rmi docker.infra.cloveri.com/$CI_PROJECT_PATH/$IMAGE_NAME:latest
+    - docker rmi docker.infra.cloveri.com/$CI_PROJECT_PATH/$IMAGE_NAME:`grep version package.json | grep -Po [0-9.]*` .
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
 
 deploy_in_test:
   stage: deploy
+  image: willhallonline/ansible:2.16.4-bookworm
+  variables:
+    PATH_SSH_KEY: ssh_ansible
+    ANSIBLE_FORCE_COLOR: 'true'
+    ANSIBLE_HOST_KEY_CHECKING: 'False'
+    ANSIBLE_CALLBACK_WHITELIST: 'profile_tasks'
+    ANSIBLE_GATHER_TIMEOUT: 60
+    ANSIBLE_TIMEOUT: 60
+    ANSIBLE_PERSISTENT_CONNECT_TIMEOUT: 120
+    ANSIBLE_PERSISTENT_CONNECT_RETRY_TIMEOUT: 30
+    ANSIBLE_PERSISTENT_COMMAND_TIMEOUT: 30
+    extraVars: >
+      CI_PROJECT_TITLE=$CI_PROJECT_TITLE
+      CI_COMMIT_BRANCH=$CI_COMMIT_BRANCH
+      CI_COMMIT_MESSAGE="$CI_COMMIT_MESSAGE"
+      CI_JOB_URL=$CI_JOB_URL
+      cli_secret=$CI_JOB_TOKEN
+      cli_user_name=$CI_REGISTRY_USER
+      container_name=$IMAGE_NAME
+      GITLAB_USER_LOGIN=$GITLAB_USER_LOGIN
+      owner_user=$USER_NAME
+      POS_TOK=$POS_TOK
+      PRE_TOK=$PRE_TOK
+      project_name=achiever_front
+      image_name='docker.infra.cloveri.com/$CI_PROJECT_PATH/$IMAGE_NAME'
+# image_tag=$IMAGE_TAG
   script:
-    - sed -i "s/PROJECT_IMAGE_NAME/$CI_PROJECT_NAME:t`grep version package.json | grep -Po [0-9.]*`/g" compose.yaml
-    - docker login https://docker.infra.cloveri.com -u $CI_REGISTRY_USER --password-stdin <<<$CI_JOB_TOKEN
-    - docker compose -p achiever_front down || true
-    - docker rmi `docker images -q docker.infra.cloveri.com/$CI_PROJECT_PATH` || true
-    - docker compose up -d
-  after_script:
-    - sleep 10
-    - 'curl -X POST -s -H "Content-Type:multipart/form-data" -F message_thread_id=1491 -F chat_id=-1002069387923_1491 -F text="Project: $CI_PROJECT_TITLE. Commit in the $CI_COMMIT_BRANCH branch. Comment in the commit: $CI_COMMIT_MESSAGE. Author of commit: $GITLAB_USER_LOGIN. New version of the project: `grep version package.json | grep -Po [0-9.]*`. Status: $CI_JOB_STATUS. $CI_JOB_URL" "https://api.telegram.org/$POS_TOK:$PRE_TOK/sendMessage"'
-    - docker compose -p achiever_front logs  || true
+    - ansible --version
+    - echo "${SSH_PRIVATE_KEY}" > $PATH_SSH_KEY && chmod 600 $PATH_SSH_KEY
+    - export ANSIBLE_HOST_KEY_CHECKING=False
+    - ansible --inventory-file=hosts test_servers --private-key=$PATH_SSH_KEY -m ping
+    - ansible-playbook --inventory-file=hosts --limit test_servers playbook.yaml ${extraVars:+--extra-vars "$extraVars"} --syntax-check
+    - ansible-playbook --private-key $PATH_SSH_KEY --user $USER_NAME --inventory hosts playbook.yaml ${extraVars:+--extra-vars "$extraVars"}
   rules:
     - if: '$CI_COMMIT_BRANCH == "dev"'
-  tags: [achiever]
+  tags: [achiever-dind]
