--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,7 @@ build_prod_image:
 
 deploy_in_test:
   stage: deploy
-  image: docker pull ansible/ansible:ubuntu1404
+  image: ubuntu:latest
 #  image: registry.redhat.io/ansible-automation-platform/ee-29-rhel8@sha256:3abc61cbabee2cfa1fa1c98ad582485e03bbd47eec4a0cd49e8b9d34bd4a4fdb
 #  image: willhallonline/ansible:2.16.4-bookworm
   variables:
@@ -92,6 +92,7 @@ deploy_in_test:
       image_name='docker.infra.cloveri.com/$CI_PROJECT_PATH/$IMAGE_NAME'
 # image_tag=$IMAGE_TAG
   script:
+    - apt-get update && apt-get install -y ansible
     - ansible --version
     - echo "${SSH_PRIVATE_KEY}" > $PATH_SSH_KEY && chmod 600 $PATH_SSH_KEY
     - export ANSIBLE_HOST_KEY_CHECKING=False
