--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,14 +66,14 @@ build_prod_image:
 
 deploy_in_test:
   stage: deploy
-  # image: cr.yandex/mirror/ubuntu:latest
-  image:
-    name: docker.infra.cloveri.com/cloveri.start/achiever/front/ubuntu/ansible:2.16.3
-    entrypoint: [""]
+  image: registry.access.redhat.com/ansible-runner-12/ansible-runner
+  # image:
+  #   name: docker.infra.cloveri.com/cloveri.start/achiever/front/ubuntu/ansible:2.16.3
+  #   entrypoint: [""]
 #  image: registry.redhat.io/ansible-automation-platform/ee-29-rhel8@sha256:3abc61cbabee2cfa1fa1c98ad582485e03bbd47eec4a0cd49e8b9d34bd4a4fdb
 #  image: willhallonline/ansible:2.16.4-bookworm
   variables:
-    DOCKER_AUTH_CONFIG: "{\"username\":\"registry-token-test	\",\"password\":\"stkDJqVyy9sJbbnybgvq\"}"
+    DOCKER_AUTH_CONFIG: "{\"username\":\"registry-token-test \",\"password\":\"stkDJqVyy9sJbbnybgvq\"}"
     PATH_SSH_KEY: ssh_ansible
     ANSIBLE_FORCE_COLOR: 'true'
     ANSIBLE_HOST_KEY_CHECKING: 'False'
