--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,12 +66,13 @@ build_prod_image:
 
 deploy_in_test:
   stage: deploy
+  image: docker.infra.cloveri.com/cloveri.start/achiever/front/ubuntu/ansible:2.16.3
   # image: registry.access.redhat.com/ansible-runner-12/ansible-runner
   # image:
     # name: docker.infra.cloveri.com/cloveri.start/achiever/front/ubuntu/ansible:2.16.3
     # entrypoint: [""]
 #  image: registry.redhat.io/ansible-automation-platform/ee-29-rhel8@sha256:3abc61cbabee2cfa1fa1c98ad582485e03bbd47eec4a0cd49e8b9d34bd4a4fdb
-#  image: willhallonline/ansible:2.16.4-bookworm
+#  image: willhallonline/ansible:2.16.4-bookworm 
   variables:
     # DOCKER_AUTH_CONFIG: "{\"username\":\"registry-token-test \",\"password\":\"xz_voffSfxH8ezjTbiig\"}"
     PATH_SSH_KEY: ssh_ansible
@@ -100,6 +101,7 @@ deploy_in_test:
 # image_tag=$IMAGE_TAG
   script:
     # - apt-get update && apt-get install -y ansible
+    - ping -c 5 10.0.0.33
     - ansible --version
     - echo "${SSH_PRIVATE_KEY}" > $PATH_SSH_KEY && chmod 600 $PATH_SSH_KEY
     - export ANSIBLE_HOST_KEY_CHECKING=False
