--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,11 +66,11 @@ build_prod_image:
 
 deploy_in_test:
   stage: deploy
-  image: docker.infra.cloveri.com/cloveri.start/achiever/front/ubuntu/ansible:2.16.3
+  # image: docker.infra.cloveri.com/cloveri.start/achiever/front/ubuntu/ansible:2.16.3
   # image: registry.access.redhat.com/ansible-runner-12/ansible-runner
-  # image:
-    # name: docker.infra.cloveri.com/cloveri.start/achiever/front/ubuntu/ansible:2.16.3
-    # entrypoint: [""]
+  image:
+    name: docker.infra.cloveri.com:8090/cloveri.start/achiever/front/ubuntu/ansible:2.16.3
+    entrypoint: ["/bin/sh", "-c"]
 #  image: registry.redhat.io/ansible-automation-platform/ee-29-rhel8@sha256:3abc61cbabee2cfa1fa1c98ad582485e03bbd47eec4a0cd49e8b9d34bd4a4fdb
 #  image: willhallonline/ansible:2.16.4-bookworm 
   variables:
