--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,12 +71,7 @@ deploy_in_test:
   # image:
     # name: docker.infra.cloveri.com/cloveri.start/achiever/front/ubuntu/ansible:2.16.3
     # entrypoint: ["/bin/sh", "-c"]
-  docker:
-    image: ubuntu/ansible:2.16.3
-    repo: docker.infra.cloveri.com/cloveri.start/achiever/front
-    registry: docker.infra.cloveri.com
-    secrets: [ docker_username, docker_password ]
-    auth: "go3znzMgxF7M-QJxaq_8"
+  image: docker:latest
 #  image: registry.redhat.io/ansible-automation-platform/ee-29-rhel8@sha256:3abc61cbabee2cfa1fa1c98ad582485e03bbd47eec4a0cd49e8b9d34bd4a4fdb
 #  image: willhallonline/ansible:2.16.4-bookworm 
   variables:
