--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ update_version:
     - cd git_project && git add . && git commit -m "Update build version" 
     - git push https://repository_user_token:$repository_user_token@git.infra.cloveri.com/cloveri.start/achiever/front.git/
   rules:
-    - if: '$CI_COMMIT_BRANCH == "dev|master"'
+    - if: '$CI_COMMIT_BRANCH =~ "dev|master"'
 
 build_test_image:
   stage: build
@@ -66,16 +66,8 @@ build_prod_image:
 
 deploy_in_test:
   stage: deploy
-  # image: docker.infra.cloveri.com/cloveri.start/achiever/front/ubuntu/ansible:2.16.3
-  # image: registry.access.redhat.com/ansible-runner-12/ansible-runner
-  # image:
-    # name: docker.infra.cloveri.com/cloveri.start/achiever/front/ubuntu/ansible:2.16.3
-    # entrypoint: ["/bin/sh", "-c"]
-  image: docker:latest
-#  image: registry.redhat.io/ansible-automation-platform/ee-29-rhel8@sha256:3abc61cbabee2cfa1fa1c98ad582485e03bbd47eec4a0cd49e8b9d34bd4a4fdb
-#  image: willhallonline/ansible:2.16.4-bookworm 
+  image: willhallonline/ansible:2.16.4-bookworm 
   variables:
-    # DOCKER_AUTH_CONFIG: "{\"username\":\"registry-token-test \",\"password\":\"go3znzMgxF7M-QJxaq_8\"}"
     PATH_SSH_KEY: ssh_ansible
     ANSIBLE_FORCE_COLOR: 'true'
     ANSIBLE_HOST_KEY_CHECKING: 'False'
@@ -99,10 +91,7 @@ deploy_in_test:
       PRE_TOK=$PRE_TOK
       project_name=achiever_front
       image_name='docker.infra.cloveri.com/$CI_PROJECT_PATH/$IMAGE_NAME'
-# image_tag=$IMAGE_TAG
   script:
-    # - apt-get update && apt-get install -y ansible
-    # - ping -c 5 10.0.0.33
     - ansible --version
     - echo "${SSH_PRIVATE_KEY}" > $PATH_SSH_KEY && chmod 600 $PATH_SSH_KEY
     - export ANSIBLE_HOST_KEY_CHECKING=False
