--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
     "vite-plugin-sass-dts": "^1.3.17",
     "vite-plugin-svgr": "^4.2.0"
   },
-  "proxy": "https://reg.achiever.skroy.ru"
+  "proxy": "https://api.achiever.skroy.ru"
 }
